<?xml version="1.0"?>
<package format="3">
  <name>roscon_gazebo</name>
  <version>1.0.0</version>
  <description>
    Gazebo and ROS 2 tutorial @ ROSCon FR 2024
  </description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

